# BAMapping

./: .gitignore  CMakeLists.txt  ITE.yaml  README.md
config_files/: ITE.yaml  ITE_frontend.yaml  TUM.yaml  TUM_frontend.yaml
debug/: CMakeCache.txt  Makefile  System  cmake_install.cmake
files/: camera  cameras  observations  points  problem-73-11032-pre.txt
libs/ceres_lib/include/ceres/internal/: config.h
libs/ceres_lib/lib/cmake/Ceres/: CeresConfig.cmake
libs/dbow_lib/include/DBoW2/: DBoW2Config.cmake  TemplatedVocabulary.h
libs/open3d_lib/lib/cmake/Open3D/: Open3DConfig.cmake  Open3DConfigVersion.cmake
libs/opencv_lib/include/opencv2/: cvconfig.h  opencv_modules.hpp
libs/opencv_lib/lib/: libopencv_aruco.so.3.4  libopencv_aruco.so.3.4.8  libopencv_bgsegm.so.3.4  libopencv_bgsegm.so.3.4.8  libopencv_bioinspired.so.3.4  libopencv_bioinspired.so.3.4.8  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.8  libopencv_ccalib.so.3.4  libopencv_ccalib.so.3.4.8  libopencv_datasets.so.3.4  libopencv_datasets.so.3.4.8  libopencv_dnn_objdetect.so.3.4  libopencv_dnn_objdetect.so.3.4.8  libopencv_dpm.so.3.4  libopencv_dpm.so.3.4.8  libopencv_face.so.3.4  libopencv_face.so.3.4.8  libopencv_flann.so.3.4.8  libopencv_freetype.so.3.4  libopencv_fuzzy.so.3.4  libopencv_fuzzy.so.3.4.8  libopencv_hfs.so.3.4  libopencv_highgui.so.3.4.8  libopencv_img_hash.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_line_descriptor.so.3.4  libopencv_line_descriptor.so.3.4.8  libopencv_ml.so.3.4  libopencv_ml.so.3.4.8  libopencv_objdetect.so.3.4  libopencv_objdetect.so.3.4.8  libopencv_optflow.so.3.4  libopencv_optflow.so.3.4.8  libopencv_phase_unwrapping.so.3.4  libopencv_phase_unwrapping.so.3.4.8  libopencv_plot.so.3.4  libopencv_reg.so.3.4  libopencv_rgbd.so.3.4  libopencv_rgbd.so.3.4.8  (+31 more)
libs/opencv_lib/lib/pkgconfig/: opencv.pc
libs/opencv_lib/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
libs/orbslam_lib/include/: System.h
libs/pangolin_lib/include/pangolin/: config.h
libs/pangolin_lib/lib/cmake/Pangolin/: PangolinConfig.cmake  PangolinTargets-release.cmake  PangolinTargets.cmake
scripts/: associate.py  bilateral_depth.py  depth.py  evaluate.py  filter_depth.py  match.py  orb.py  show_depth.py
src/: BundleAdjuster.cpp  BundleAdjuster.h  Error.h  Frame.cpp  Frame.h  Frontend.cpp  Frontend.h  GeometryMethods.cpp  GeometryMethods.h  Graph.cpp  Graph.h  Integrater.cpp  Integrater.h  MapPoint.h  Optimizer.cpp  Optimizer.h  PhotoGeoFactor.cpp  PhotoGeoFactor.h  Point.cpp  Point.h  Reader.cpp  Reader.h  ReprojectionFactor.h  System.cpp  Viewer.cpp  Viewer.h  Visualizer.cpp  Writer.cpp  Writer.h  createVocabulary.cpp  globalOptimization.cpp  imu_factor.h  integrateGraph.cpp  integration_base.h  subMapOptimizeTUM.cpp  submapOptimization.cpp
src/examples/: globalOptimization.cpp  localOptimization.cpp  runBackendITE.cpp  runBackendTUM.cpp  runFrontend.cpp  runFrontendITE.cpp  runFrontendTUM.cpp
src/frontend/: Alignment3D_ransac.cpp  Alignment3D_ransac.h  LoopClosing.cpp  LoopClosing.h  Mapping.cpp  Mapping.h  System.cpp  System.h  Tracking.cpp  Tracking.h
src/io/: Parser.cpp  Parser.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
src/math/: Types.h
src/tests/: convertToTUMFormat.cpp  test_ITE_frontend.cpp  test_Submap.cpp  test_TF.cpp  test_TSDF_fusion.cpp  test_bundleAdjuster.cpp  test_correspondence.cpp  test_cpu_tsdf.cpp  test_frontend.cpp  test_json.cpp  test_loopClosure.cpp  test_odometry.cpp  test_orbslam.cpp
src/util/: BundleAdjuster.cpp  BundleAdjuster.h  Converter.cpp  Converter.h  Frame.cpp  Frame.h  Graph.cpp  Graph.h  Parser.cpp  Parser.h  Point.cpp  Point.h  bal_problem.cpp  bal_problem.h  parameters.cpp  parameters.h  random.h  snavely_reprojection_error.h  utility.h
